public_html/css/portrait.css
.portrait figure img {
    max-width: 100%;
    border-radius: 50%;
}

.portrait {
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;

    -ms-flex-direction: column;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    flex-direction: column;

    -webkit-box-pack: center;

    -ms-flex-pack: center;

    justify-content: center;

    -webkit-box-align: center;

    -ms-flex-align: center;

    align-items: center;

    padding: 4rem 1rem 1rem 1rem;
}

.portrait p {
    text-align: center;
    max-width: 100%;
}

